--- a/.github/workflows/cd-manual.yaml
+++ b/.github/workflows/cd-manual.yaml
@@ -6,10 +6,13 @@ on:
       version:
         description: 'Docker image tag to deploy (e.g., latest or 123)'
         required: true
+        type: string
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
 
     steps:
       - name: Checkout repository
