--- a/.github/workflows/cd-manual.yaml
+++ b/.github/workflows/cd-manual.yaml
@@ -7,6 +7,7 @@ on:
         description: 'Docker image tag to deploy (e.g., latest or 123)'
         required: true
         type: string
+        default: 'latest'
 
 jobs:
   deploy:
