--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,14 +1,25 @@
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/bettingdb
-    username: postgres
-    password: postgres
+    url: ${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/pyramid_keno_db}
+    username: ${SPRING_DATASOURCE_USERNAME:pyramid_keno_user}
+    password: ${SPRING_DATASOURCE_PASSWORD:pyramid_keno_password}
+    hikari:
+      maximum-pool-size: 10
+      minimum-idle: 2
+      idle-timeout: 300000
+      connection-timeout: 20000
+      max-lifetime: 1200000
   jpa:
+    database-platform: org.hibernate.dialect.PostgreSQLDialect
     hibernate:
-      ddl-auto: validate
+      ddl-auto: ${SPRING_JPA_HIBERNATE_DDL_AUTO:update}
+    show-sql: false
     properties:
       hibernate:
         format_sql: true
+        jdbc:
+          lob:
+            non_contextual_creation: true
 server:
   port: 8080
 management:
@@ -16,3 +27,11 @@ management:
     web:
       exposure:
         include: health,info,metrics
+  health:
+    db: 
+      enabled: true
+
+logging:
+  level:
+    com.pyramid.bettingplatform: INFO 
+    org.hibernate.SQL: WARN
