--- a/gitops/charts/backend/templates/service.yaml
+++ b/gitops/charts/backend/templates/service.yaml
@@ -1,11 +1,15 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "backend.fullname" . }}
+  name: {{ include "backend.fullname" . }}-svc
+  namespace: {{ .Values.global.namespace }}
+  labels:
+    {{- include "backend.labels" . | nindent 4 }}
 spec:
   type: {{ .Values.service.type }}
   ports:
     - port: {{ .Values.service.port }}
       targetPort: 8080
+      protocol: TCP
   selector:
-    app: {{ include "backend.name" . }}
+    app: {{- include "backend.selectorLabels" . | nindent 4 }}
