--- a/gitops/charts/backend/values.yaml
+++ b/gitops/charts/backend/values.yaml
@@ -1,14 +1,39 @@
 replicaCount: 1
 image:
   repository: d22002/keno-backend
-  tag: "sha-PLACEHOLDER"
+  tag: "latest"
   pullPolicy: IfNotPresent
 service:
   type: ClusterIP
   port: 8080
 
-resources: {}
+resources: 
+  requests:
+    memory: "512Mi"
+    cpu: "128m"
+  limits:
+    memory: "1Gi"
+    cpu: "256Mi"
+
 ingress:
   enabled: false
 
 extraEnv: []
+
+database:
+  host: "keno-database-postgresql-service"
+  port: 5432
+  name: "pyramid_keno_db"
+  username: "pyramid_keno_user"
+  password: "pyramid_keno_password"
+
+readiness:
+  initialDelaySeconds: 30
+  periodSeconds: 5
+
+liveness:
+  initialDelaySeconds: 60
+  periodSeconds: 10
+
+global:
+  namespace: pyramid-keno
