--- a/gitops/charts/backend/values.yaml
+++ b/gitops/charts/backend/values.yaml
@@ -1,7 +1,7 @@
 replicaCount: 1
 image:
   repository: d22002/keno-backend
-  tag: "latest"
+  tag: "sha-PLACEHOLDER"
   pullPolicy: IfNotPresent
 service:
   type: ClusterIP
