--- a/gitops/charts/backend/templates/deployment.yaml
+++ b/gitops/charts/backend/templates/deployment.yaml
@@ -44,7 +44,7 @@ spec:
           - name: SPRING_JPA_HIBERNATE_DDL_AUTO
             value: "validate"
           resources:
-            {{- toYaml .Values.resources | nindent 12 -}}
+            {{- toYaml .Values.resources | nindent 12 }}
           livenessProbe:
             httpGet:
               path: /actuator/health
