--- a/gitops/charts/backend/templates/deployment.yaml
+++ b/gitops/charts/backend/templates/deployment.yaml
@@ -49,6 +49,16 @@ spec:
                 key: POSTGRES_PASSWORD
           - name: SPRING_JPA_HIBERNATE_DDL_AUTO
             value: "validate"
+          - name: SPRING_JPA_PROPERTIES_HIBERNATE_DEFAULT_SCHEMA
+            value: "{{ .Values.database.schema }}"
+          - name: SPRING_FLYWAY_SCHEMAS
+            value: "{{ .Values.database.schema }}"
+          - name: SPRING_FLYWAY_DEFAULT_SCHEMA
+            value: "{{ .Values.database.schema }}"
+          - name: SPRING_FLYWAY_BASELINE_ON_MIGRATE
+            value: "true"
+          - name: SPRING_FLYWAY_CREATE_SCHEMAS
+            value: "true"
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
           livenessProbe:
