fix: handle clean commit message

--- a/.github/workflows/cd-manual.yaml
+++ b/.github/workflows/cd-manual.yaml
@@ -30,5 +30,5 @@ jobs:
           git config user.name "suvorov"
           git config user.email "suvorov22002@gmail.com"
           git add gitops/charts/backend/values.yaml
-          git commit -m "Deploy image version ${{ github.event.inputs.version }}"
+          git diff --cached --quiet || git commit -m "Deploy image version ${{ github.event.inputs.version }}"
           git push origin master
